# mitre-bot

./: .gitignore  AGENTS.md  README.md  attack-patterns.json  check_models.py  main.py  pyproject.toml
app/agents/: incident_analysis.py  prompt.py
app/db/: chroma.py  config.py  embedd_database.py
app/tools/: mitre-attack.py  mitre_attack.py  retrieval.py
atk_patterns_chroma/6825cd44-5457-43f3-864d-b04a9bebe1c9/: index_metadata.pickle
atk_patterns_chroma/c38016de-9886-4856-8e13-48beef0862e7/: index_metadata.pickle
preprocessed/: go.mod  main.go  type.go
